src/test/deca/context/valid/nonprovided/init_bool.deca
{
boolean x = 1 > 4;
}
