src/test/deca/context/invalid/nonprovided/wrong_type_assign.deca
{
int x = 4;
x = "erreur!";
}
